z-index fixed

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .transform-example-container {
   height: 100vh;
   position: relative; 
+  z-index: 1;
   /* background: #fff2ea; */
 }
 .transform-example-container .transform-absolute {
@@ -92,7 +93,7 @@ transform: translate(-5%, -5%); */
   line-height: 100%;
   /* word-spacing: -2vh; */
   /* letter-spacing: -0.5vh;  */
-  color: #f0bb28;
+  color: #ffffff;
   background-color: rgb(0, 0, 0);
   /* font-weight: bold; */
   /* text-orientation:sideways-right; */
@@ -183,8 +184,8 @@ Changing the animation keyframes also changes speed. */
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: rgb(194, 126, 0);
-  color: white;
+  background-color: white;
+  color: black;
   z-index: 6;
   /* padding-left: 5%;
     padding-right: 5%;
@@ -219,7 +220,7 @@ Changing the animation keyframes also changes speed. */
 }
 
 .project {
-
+z-index: 99;
   cursor: grab;
   height: 15vh;
   position: absolute;
